k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mih-ingress
  namespace: mih-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: server-mih.ak8s.ic.unicamp.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mih-api-service
                port:
                  number: 80
